src/test/deca/syntax/valid/decl_method/test_decl_method_return_null.deca
// Description:
//    Programme minimaliste creant une classe
//
// Resultats:
// no viable alternative at input 'publicvoidsetA'
// Historique:
//    cree le 01/01/2024

class A {   
    int a;

    void getA() {
        return null;
    }
}
