src/test/deca/syntax/invalid/decl_class/test_decl_class_with_maj.deca
// Description:
//    Programme minimaliste creant une classe
//
// Resultats:
//  no viable alternative at input 'Class'
// Historique:
//    cree le 01/01/2024

Class A {

};